tests/errors/construction/initializer-in-if-condition.fn
---
Description: Bare initializer expression used as if condition
Expected: compile error
---

type Vector2
{
    x: f32
    y: f32

    init{}
}

type Program
{
    fn Main -> i32
    {
        if Vector2 { x: 1.0, y: 2.0 }
        {
            var a = true
        }
        return 0
    }
}
